--- a/movie-watchlist/package.json
+++ b/movie-watchlist/package.json
@@ -14,7 +14,9 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^6.20.1",
-    "axios": "^1.4.0"
+    "axios": "^1.4.0",
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
